--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,45 +1,101 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  build:
-    working_directory: ~/repo
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+orbs:
+  node: circleci/node@5.0.2
+  heroku: circleci/heroku@1.2.6
+  docker: circleci/docker@1.5.0
+executors:
+  docker-publisher:
+    environment:
     docker:
-      - image: circleci/golang:1.15.8
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: circleci/node:latest
+        auth:
+          username: $DOCKERHUB_USER
+          password: $DOCKERHUB_PASS
+
+jobs:
+  build_and_test:
+    executor: node/default
     steps:
       - checkout
-      - run: go test -v ./...
-      
-      
-      # - restore_cache:
-      #     keys:
-      #       - go-mod-v4-{{ checksum "go.sum" }}
-      # - run:
-      #     name: Install Dependencies
-      #     command: go mod download
-      # - save_cache:
-      #     key: go-mod-v4-{{ checksum "go.sum" }}
-      #     paths:
-      #       - "/go/pkg/mod"
-      # - run:
-      #     name: Run tests
-      #     command: |
-      #       mkdir -p /tmp/test-reports
-      #       gotestsum --junitfile /tmp/test-reports/unit-tests.xml
-      # - store_test_results:
-      #     path: /tmp/test-reports
+      - node/install-packages:
+          pkg-manager: yarn
+      - run:
+          command: | 
+            yarn start
+            yarn build
+            yarn test
+          name: Build app
+      - persist_to_workspace:
+          root: ~/build
+          paths:
+            - .
+  publish-docker-image:
+    executor: docker-publisher
+    steps:
+         - checkout
+         - setup_remote_docker
+         - run:
+            name: Publish docker image to docker hub
+            command : |
+             echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+             docker build . -t teamrulerhng9/frontend:latest
+             docker push teamrulerhng9/frontend:latest
+             
+  Deploy-staging:
+    machine:
+      enabled: true
+    steps:
+      - run:
+            name: Deploy Over SSH
+            command : |
+              ssh $SSH_PROD_USER@$SSH_PROD_HOST "cd todoassistant.api" || "docker-compose down" || "docker-compse up -d"
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  Deploy-prod:
+    machine:
+      enabled: true
+    steps:
+      - run:
+            name: Deploy Over SSH
+            command : |
+             ssh $SSH_PROD_USER@$SSH_PROD_HOST "cd todo-docker" || "docker-compose down" || "docker-compse up -d"
+                 
+             
+  deploy: # this can be any name you choose
+    executor: heroku/default
+    steps:
+      - attach_workspace:
+          at: ~/project
+      - heroku/deploy-via-git:
+          force: true 
+
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - build
+  test_my_app: 
+      jobs: 
+         - build_and_test
+         - publish-docker-image:
+                 requires:
+                   - build_and_test
+#                    - publish-docker-image
+
+                 filters:
+                     branches:
+                       only: 
+                         - Development
+
+         - Deploy-staging:
+                requires: 
+                    - build_and_test
+                    - publish-docker-image
+                filters:
+                      branches:
+                        only:
+                          - Development
+         - Deploy-prod:
+                requires:
+                    - build_and_test
+                    - publish-docker-image
+                    - Deploy-staging
+                filters:
+                      branches:
+                         only:
+                           - Development
