--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -31,10 +32,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-react": "^7.31.11",
+    "husky": "^7.0.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.1",
-    "husky": "^7.0.2"
+    "pretty-quick": "^3.1.1"
   },
   "browserslist": {
     "production": [
