--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
             yarn build
             yarn test
           name: Build app
+          no_output_timeout: 15m
       - persist_to_workspace:
           root: ~/build
           paths:
