--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "Development" ]
 
 jobs:
-  build:
+  Build:
 
     runs-on: ubuntu-latest
 
@@ -29,3 +29,52 @@ jobs:
     - run: yarn
     - run: yarn build
     
+  
+  Build-and-push-image:
+      runs-on: ubuntu-latest
+      needs: Build
+      if: success() && github.ref == 'refs/heads/Development'
+     
+      steps:
+       - name: checkout code
+         uses: actions/checkout@v2
+         
+       - name: set up QEMU
+         uses: docker/setup-qemu-action@v2
+       
+       
+       - name: set up docker buildx
+         uses: docker/setup-buildx-action@v2 
+         with:
+           version: v0.7.0
+      
+       - name: Login to DockerHub
+         uses: docker/login-action@v2
+         with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
+        
+       - name: Build and push
+         uses: docker/build-push-action@v3
+         with:
+           context: .
+           push: true
+           tags: teamrulerhng9/frontend:latest
+           
+      
+  Deploy-staging:
+           runs-on: ubuntu-latest
+           needs: Build-and-push-image
+           if: success() && github.ref == 'refs/heads/Development' 
+           steps:
+
+             - name: deploy to staging server
+               uses: appleboy/ssh-action@master
+               with: 
+                 host: ${{ secrets.HOST }}
+                 username: ${{ secrets.USERNAME }}
+                 password: ${{ secrets.Password }}
+                 port: ${{ secrets.PORT }}
+                 script: |
+                     sudo docker-compose pull
+                     sudo docker-compose up -d
