--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,3 +78,20 @@ jobs:
                  script: |
                      sudo docker-compose pull
                      sudo docker-compose up -d
+                     
+  Deploy-prod:
+           runs-on: ubuntu-latest
+           needs:  ["Build", "Deploy-staging"]
+           if: success() && github.ref == 'refs/heads/Development' 
+           steps:
+
+             - name: deploy to staging server
+               uses: appleboy/ssh-action@master
+               with: 
+                 host: ${{ secrets.PROD_HOST }}
+                 username: ${{ secrets.USERNAME }}
+                 password: ${{ secrets.Password }}
+                 port: ${{ secrets.PORT }}
+                 script: |
+                     sudo docker-compose pull
+                     sudo docker-compose up -d
