--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,5 +93,6 @@ jobs:
                  password: ${{ secrets.Password }}
                  port: ${{ secrets.PORT }}
                  script: |
+                     cd todo-docker
                      sudo docker-compose pull
                      sudo docker-compose up -d
