--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
+    "tiny-slider-react": "^0.5.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
