--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-moment": "^1.1.2",
+    "react-phone-number-input": "^3.2.12",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
