--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
+    "gapi-script": "^1.2.0",
     "moment": "^2.29.4",
     "postcss": "^8.4.19",
     "pusher-js": "^7.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.6.0",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.3",
