--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "todoassistant.web",
   "version": "0.1.0",
   "private": true,
@@ -31,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.40.0",
     "react-icons": "^4.6.0",
     "react-moment": "^1.1.2",
     "react-phone-number-input": "^3.2.12",
