--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "todoassistant.web",
   "version": "0.1.0",
   "private": true,
@@ -19,6 +18,7 @@
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@radix-ui/react-checkbox": "^1.0.1",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
