--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "firebase": "^9.14.0",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "postcss": "^8.4.19",
