--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
     "gapi-script": "^1.2.0",
+    "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.4",
+    "mui-tel-input": "^2.1.0",
     "postcss": "^8.4.19",
     "pusher-js": "^7.5.0",
     "react": "^18.2.0",
