--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@mui/x-date-pickers": "^5.0.9",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@sentry/react": "^7.23.0",
     "@sentry/tracing": "^7.23.0",
