--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "atatus-js": "^4.5.0",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
