--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -36,6 +36,7 @@
     "pusher-js": "^7.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.40.0",
     "react-hot-toast": "^2.4.0",
@@ -45,7 +46,9 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
+    "react-social-login-buttons": "^3.6.1",
     "react-toastify": "^9.1.1",
+    "reactjs-social-login": "^2.6.1",
     "sass": "^1.56.1",
     "tiny-slider-react": "^0.5.6",
     "web-vitals": "^2.1.4",
