--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-moment": "^1.1.2",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.12",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -52,6 +53,7 @@
     "react-toastify": "^9.1.1",
     "reactjs-social-login": "^2.6.1",
     "sass": "^1.56.1",
+    "styled-components": "^5.3.6",
     "tiny-slider-react": "^0.5.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
