--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "reactjs-social-login": "^2.6.1",
     "sass": "^1.56.1",
     "tiny-slider-react": "^0.5.6",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
